--- a/layouts/partials/benchsuite.html
+++ b/layouts/partials/benchsuite.html
@@ -22,6 +22,9 @@
               <div><span>Import</span></div>
             </th>
             <th>
+              <div><span>Move</span></div>
+            </th>
+            <th>
               <div><span>Create</span></div>
             </th>
             <th>
