--- a/layouts/bench/summary_row.html
+++ b/layouts/bench/summary_row.html
@@ -18,6 +18,13 @@
     <div class="dps"><a href="{{ .Permalink }}index.html#massimport">{{ (index .Site.Data.bench $data).import_dps }}</a></div>
   </td>
   <td>
+    {{ if ne (index .Site.Data.bench $data).move_duration nil }}
+    <a href="{{ .Permalink }}index.html#move"><div class="times"><span class="">{{ (index .Site.Data.bench $data).move_duration }}</span></div></a>
+    {{ else }}
+    NA
+    {{ end }}
+  </td>
+  <td>
     <div class="dps"><a href="{{ .Permalink }}index.html#create">{{ (index .Site.Data.bench $data).create_rps }}</a></div>
     <div class="time">
       <span class="avg">{{ (index .Site.Data.bench $data).create_avg }}</span>
@@ -60,10 +67,18 @@
     <div class="dps"><a href="{{ .Permalink }}index.html#reindex">{{ (index .Site.Data.bench $data).reindex_dps }}</a></div>
   </td>
   <td>
+    {{ if ne (index .Site.Data.bench $data).cleanup_duration nil }}
     <a href="{{ .Permalink }}index.html#cleanup"><div class="times"><span class="">{{ (index .Site.Data.bench $data).cleanup_duration }}</span></div></a>
+    {{ else }}
+    NA
+    {{ end }}
   </td>
   <td>
+    {{ if ne (index .Site.Data.bench $data).fullgc_duration nil }}
     <a href="{{ .Permalink }}index.html#fullgc"><div class="times"><span class="">{{ (index .Site.Data.bench $data).fullgc_duration }}</span></div></a>
+    {{ else }}
+    NA
+    {{ end }}
   </td>
   <td>
     <div class="report"><a href={{ .Permalink }}index.html title="view benchmark report"></a></div>
