--- a/themes/old_hyde/layouts/partials/head.html
+++ b/themes/old_hyde/layouts/partials/head.html
@@ -3,7 +3,7 @@
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  {{ hugo.Generator }}
+  {{ .Hugo.Generator }}
 
   <!-- 0. Include Nuxeo Font. -->
   <style>
@@ -66,5 +66,5 @@ analytics.page()
   <meta name="theme-color" content="#2199e8">
 
   <!-- RSS -->
-  <link href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 </head>
